--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "mysql": "^2.18.1",
     "node-cache": "^5.1.2",
     "node-fetch": "^2.6.1",
-    "nodemailer": "^6.4.17",
+    "nodemailer": ">=4.7.7",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
